--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -397,12 +397,17 @@ fin de base */
     align-items: center;
     width: 100%;
     height: 4vh;
+    color: rgba(247, 247, 247, 0.527);
     background-color:  #363737;;
     font-family: 'Industry';
     font-size: 1rem;
+    transition: .4s all;
 }
 
+.section--titl:hover{
+    color: white;
 
+}
 
 
 .bloque__productos{
