--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -4,7 +4,7 @@ sumar a la base */
 
 @font-face{
     font-family: 'Industry';
-    src: url("../static/fonts/Industry.ttf") format("truetype");
+    src: url(".././fonts/Industry.ttf") format("truetype");
 }
 
 /* Base */
@@ -321,7 +321,7 @@ fin de base */
     width: 100%;
     height: 27vw;
     position: relative;
-    background-image: url('../static/img/fondoDB.jpg');
+    background-image: url('.././img/fondoDB.jpg');
     background-repeat: no-repeat;
     background-size: 129%;
     background-position-x: 87%;
@@ -701,7 +701,7 @@ ojo con este que se usa en varios lados */
     flex-direction: column;
     align-items: center;
     min-height: 70vh;
-    background-image: url('../static/img/lupuloOscuro.jpg');
+    background-image: url('.././img/lupuloOscuro.jpg');
     padding: 2%;
 }
 
