--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -35,10 +35,6 @@ html {
     overflow-x: hidden;
 }
 
-.cabeza{
-    width: 100%;
-}
-
 .contenedorPreIntro{
     background-color: rgb(0, 0, 0);
     display: flex;
@@ -206,6 +202,9 @@ html {
 
 /* EMPIEZA HEADER */
 
+.cabeza{
+    width: 100%;
+}
 
 .navBar {
     display: flex;
@@ -838,7 +837,7 @@ ojo con este que se usa en varios lados */
 }
 
 .log--submit{
-    background-color: grey;
+    background-color:#61892F;
     width: 100%;
     height: 7vh;
     font-family: 'Industry';
@@ -848,11 +847,12 @@ ojo con este que se usa en varios lados */
     transition: 0.4s all;
     position: absolute;
     bottom: 10%;
+    color: white
 }
 
 .log--submit:hover{
-    color: grey;
-    background-color: #222629;
+    color:#61892F;
+    background-color:grey;
 }
 
 .log--submit:active{
@@ -1345,25 +1345,20 @@ ojo con este que se usa en varios lados */
     .buscador__formulario--input:focus{
         font-size: 0.8rem;
     }
-
-
     .portada--titl{
-        width: 20%;
-        align-items: center;
-        justify-content: center;
+        width: 23%;
     }
     
 
     .cont__img__titl {
-        display: flex;
-        height: 22vw;
+        height: 23vw;
         background-size: 135%;
         background-position-x: 87%;
         background-position-y: 48%;
 }
 
     .portada--titl:hover {
-        width: 21%;
+        width: 26%;
     }
 
     .imagenFooter {
@@ -1444,9 +1439,7 @@ ojo con este que se usa en varios lados */
 
     /* ESTILOS RESPONSIVE DE PÁGINA PRODUCTO */
 
-    .cont__producto{
-        width: 5vw;
-    }
+    ¿
 
     /* .producto--img {
         width: 30%;
@@ -1460,7 +1453,7 @@ ojo con este que se usa en varios lados */
 
     /* ESTILOS PARA HOME */
     .cont__producto{
-        width: 20%;
+        width: 25%;
     }
 
     .bloque__productos{
@@ -1492,13 +1485,8 @@ ojo con este que se usa en varios lados */
     }
 
     .btn--vent{
-        width:14%;
+        width:18%;
         margin-top: 0%;
-        height: 5vh;
-        font-size: 0.6rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
 
     .btn--vent:nth-child(3){
@@ -1507,9 +1495,9 @@ ojo con este que se usa en varios lados */
 
     .select--tcerveza{
         font-family: "Industry";
-        height: 5vh;
-        font-size: .7rem;
-        width: 47%;
+        height: 6vh;
+        font-size: .8rem;
+        width: 60%;
         order: 2;
         margin: 1%;
     }
@@ -1675,7 +1663,7 @@ ojo con este que se usa en varios lados */
 
 
     .carrito__cant__agregar{
-        width: 100%;
+       /* width: 100%;*/
         align-items: end;
     }
     .carrito_total{
