creamos rutas de modificar y crear productos. cree carpetas views usuarios y productos

--- a/site/src/views/modif_producto.ejs
+++ b/site/src/views/modif_producto.ejs
@@ -13,7 +13,7 @@
                 <input class="buscador__formulario--input" type="text" placeholder="buscá el producto a modificar.." autofocus>
             </form>
 
-            <img class="buscador__lupa" src="./img/lupa.svg" alt="Lupita">
+            <img class="buscador__lupa" src="/img/lupa.svg" alt="Lupita">
 
         </section>
 
