--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -595,7 +595,7 @@ fin de base */
     font-family: 'Industry';
     font-size: .7rem;
     width: 40%;
-    color: #60892f;
+    color: #73aa2f;
     padding: 1%;
     background-color: #222629;
     border: none;
@@ -823,7 +823,7 @@ ojo con este que se usa en varios lados */
     background-color: black;
     border: grey solid .3vh;
     padding: 4%;
-    color:#61892F;
+    color:#97c264;;
     transition: 0.3s all;
     cursor: pointer;
 }
@@ -1282,7 +1282,7 @@ ojo con este que se usa en varios lados */
     /* ESTILOS RESPONSIVE DE NAVBAR */
 
     .navBar {
-        height: 8vh;
+        height: 8.5vh;
     }
 
     .navBar__menu{
@@ -1356,10 +1356,6 @@ ojo con este que se usa en varios lados */
 
     .cont__venTodas {
         height: 24vh;
-    }
-
-    .logo-navBar {
-        width: 13vh
     }
 
     .buscador__formulario--input{
@@ -1571,19 +1567,28 @@ ojo con este que se usa en varios lados */
 
     .registro{
         padding-bottom: 4%;
+        padding-top: 4%;
         justify-content: space-evenly;
         align-items: center;
     }
     .registrate{
         flex:1;
         text-align: center;
+        font-size: 1.6rem;
+        padding-left: 12vh;
     }
 
     .link_log{
         width: 20%;
         padding-left: 0%;
+        padding-right: 17vh;
         flex: 1;
         text-align: center;
+    }
+
+    .link_log:hover{
+
+    color:#86C232;
     }
 
     .reg__form{
@@ -1592,12 +1597,18 @@ ojo con este que se usa en varios lados */
     }
 
     .reg--input{
-        font-size: .7rem;
+        font-size: .6rem;
+        padding: 5%;
+        height: 6vh;
+        margin-bottom: 5%;
+        width: 85%;
     }
 
     .reg--submit{
         margin-top: 10%;
         font-size: 1rem;
+        height: 8vh;
+        width: 70%;
     }
     .reg--submit--eliminar{
         font-size: 1rem;
