ordene los archivos de rutas y controllers. cambie nombres de archivos para tener todo en ingles lo que no sea visible para los usuarios

--- a/site/src/views/carrito.ejs
+++ b/site/src/views/carrito.ejs
@@ -10,7 +10,7 @@
 				<h2 class="mi_carrito">MI CARRITO</h2>
 			<article class="carrito_productos">
 				<article class="carrito__producto">
-					<img class="carrito_producto--img" src="./img/ipa.jpg" alt="birraA">
+					<img class="carrito_producto--img" src="/img/ipa.jpg" alt="birraA">
 					<article class="carrito_producto__info">
 						<p class= carrito_descripcion_nombre>IPA 14%</p>
 						<p class= carrito_descripcion> 500ML</p>
@@ -31,7 +31,7 @@
 					</article>
 				</article>
 					<article class="carrito__producto">
-						<img class="carrito_producto--img" src="./img/Rubia.jpg" alt="birraA">
+						<img class="carrito_producto--img" src="/img/Rubia.jpg" alt="birraA">
 						<article class="carrito_producto__info">
 							<p class= carrito_descripcion_nombre>Rubia 7%</p>
 							<p class= carrito_descripcion> 500ML</p>
@@ -53,7 +53,7 @@
 					</article>
 				
 					<article class="carrito__producto">
-						<img class="carrito_producto--img" src="./img/Negra.jpg" alt="birraA">
+						<img class="carrito_producto--img" src="/img/Negra.jpg" alt="birraA">
 						<article class="carrito_producto__info">
 							<p class= carrito_descripcion_nombre>Negra 14%</p>
 							<p class= carrito_descripcion> 500ML</p>
