--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -10,21 +10,21 @@
 
         <section class="navBar__linksMenu">
             <a class="linksMenu--a" href="/">+ home</a>
-            <a class="linksMenu--a" href="/producto">+ producto</a>
+            <a class="linksMenu--a" href="/products">+ producto</a>
             <a class="linksMenu--a" href="/sobre_nosotros">+ sobre nosotros</a>
             <a class="linksMenu--a" href="/faq">+ preguntas frecuentes</a>
-            <a class="linksMenu--a" href="/login">+ login</a>
-            <a class="linksMenu--a" href="/registro">+ registrate</a>
-            <a class="linksMenu--a" href="/carrito">+ carrito</a>
+            <a class="linksMenu--a" href="/users/login">+ login</a>
+            <a class="linksMenu--a" href="/users/registro">+ registrate</a>
+            <a class="linksMenu--a" href="/products/carrito">+ carrito</a>
             <img class="x_menu" src="/img/laX.svg" alt="laX" onclick="toggleClass()">
         </section>
 
         <section class="navBar__contenedor--logo"><a href="/"><img class="logo-navBar" src="/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
         <section class="navBar__faq--carrito">
-            <a href="faq">
+            <a href="/faq">
                 <img class="navBar--imagenes" src="/img/question.svg" alt="question">
             </a>
-            <a href="carrito">
+            <a href="/products/carrito">
                 <img class="navBar--imagenes" src="/img/shopping-cart.svg" alt="carrito">
             </a>
         </section>
