base de datos a json

--- a/site/src/views/products/admin_db.ejs
+++ b/site/src/views/products/admin_db.ejs
@@ -12,10 +12,10 @@
         </section>
         <section class="cont__admin--btn">
             <button href="index" class="btn--adm">
-                <a href="">SUMAR PRODUCTO</a>
+                <a href="/products/crear">SUMAR PRODUCTO</a>
             </button></a>
             <button href="" class="btn--adm">
-                <a href="">MODIFICAR/ELIMINAR PRODUCTO</a>
+                <a href="/products/modificar">MODIFICAR/ELIMINAR PRODUCTO</a>
             </button></a>
         </section>
              
