--- a/site/src/views/products/producto.ejs
+++ b/site/src/views/products/producto.ejs
@@ -28,7 +28,7 @@
                         <button class="btn--agregar">Agregar</button>
                     </section>
                 <p class="descripcion--pp">
-                    <%= birra.descripcion()%>
+                    <%= birra.descripcion%>
                 </p>
                    <!-- Nuestra primera cerveza! Elaborada con lupulos 100% americanos, sabores citricos que recuerdan la naranja y el maracuya. Refrescante y amarga, ideal para disfrutar con un buen asado.                 -->
                 </section>   
