--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -9,7 +9,7 @@
       
         <section class= "registro">
             <p class="registrate">Registrate</p>
-            <a class="link_log" href="/login">¿ya sos cliente?</a>
+            <a class="link_log" href="/users/login">¿ya sos cliente?</a>
         </section>
             <form action="/registro" method="POST" class="reg__form">
                 <input class="reg--input" type= "text" name="regNombre" placeholder="NOMBRE" id="regNombre" autofocus required>
