comenzamos validacion registro

--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -11,7 +11,7 @@
             <p class="registrate">Registrate</p>
             <a class="link_log" href="/users/login">¿ya sos cliente?</a>
         </section>
-            <form action="/registro" method="POST" class="reg__form">
+            <form action="/users/registrar" method="POST" class="reg__form">
                 <input class="reg--input" type= "text" name="regNombre" placeholder="NOMBRE" id="regNombre" autofocus required>
                 <input class="reg--input" type="text" name="regApellido" placeholder="APELLIDO" id="regApellido" autofocus required>
                 <input class="reg--input" type="email" name="regMail" placeholder="doncerveza@dbirra.com.ar" id="logMail" autofocus required>
