--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -87,6 +87,10 @@ html {
     transform: translate(-40px,0px);
 }
 
+.formFiltroHome{
+    width: 70%;
+}
+
 
 .cont__intro--logo:hover .st2r{
     fill:  grey;
