--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -26,17 +26,20 @@
             </form>   
             </section>
         </article>
-        <h2 class="section--titl">MÁS VENDIDAS</h2>
+        
+        <h2 class="section--titl"><%= eleccion %></h2>
 
     <section class="bloque__productos">
         
+        <% if (typeof cervezas != 'undefined'){ %> 
+            <% cervezas.forEach(element =>{ %> 
             <article class="cont__producto">
-                <img class="producto--img" src="./img/ipa.jpg" alt="birraA">
+                <img class="producto--img" src="./img/<%= element.nombre %>.jpg" alt="birraA">
                 <article class="producto__info">
-                    <p>IPA 14%</p>
+                    <p><%= element.nombre + ' ' + element.graduacion %></p>
                     <section class="info--precioMl">
-                    <p>500ML</p>
-                    <p>$100</p>
+                    <p><%= element.mililitros %>ML</p>
+                    <p>$<%= element.precio %></p>
                     </section>
                 </article>
                 
@@ -51,7 +54,7 @@
                 
             </article>
             
-
+         <%})} %> 
 
     </section>
 
