--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="pie">
     <a href="/"><img class="imagenFooter" src="/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
     <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
-    <script src="js/menu.js"></script>
+    <script src="/js/menu.js"></script>
 </footer>
