--- a/site/src/views/products/carrito.ejs
+++ b/site/src/views/products/carrito.ejs
@@ -31,7 +31,7 @@
 					</article>
 				</article>
 					<article class="carrito__producto">
-						<img class="carrito_producto--img" src="/img/Rubia.jpg" alt="birraA">
+						<img class="carrito_producto--img" src="/img/rubia.jpg" alt="birraA">
 						<article class="carrito_producto__info">
 							<p class= carrito_descripcion_nombre>Rubia 7%</p>
 							<p class= carrito_descripcion> 500ML</p>
@@ -53,7 +53,7 @@
 					</article>
 				
 					<article class="carrito__producto">
-						<img class="carrito_producto--img" src="/img/Negra.jpg" alt="birraA">
+						<img class="carrito_producto--img" src="/img/negra.jpg" alt="birraA">
 						<article class="carrito_producto__info">
 							<p class= carrito_descripcion_nombre>Negra 14%</p>
 							<p class= carrito_descripcion> 500ML</p>
